force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/Apttus_Config2__ConfigFlow__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define a UI flow for CPQ</description>
    <label>Config Flow</label>
</CustomObject>