force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/fields/Apttus_Config2__AssetsPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetsPage__c</fullName>
    <defaultValue>&quot;SelectInstalledProductsEn&quot;</defaultValue>
    <description>The assets page. Specify one of the following pages or a custom page. 

SelectInstalledProducts
SelectInstalledProductsEn</description>
    <inlineHelpText>The assets page. Specify one of the following pages or a custom page. 

SelectInstalledProducts
SelectInstalledProductsEn</inlineHelpText>
    <label>Assets Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>