force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/fields/Apttus_Config2__CartPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartPage__c</fullName>
    <defaultValue>&quot;CartDetailView&quot;</defaultValue>
    <description>The cart page. Specify one of the following pages or a custom page. 

CartView 
CartDetailView</description>
    <inlineHelpText>The cart page. Specify one of the following pages or a custom page. 

CartView 
CartDetailView</inlineHelpText>
    <label>Cart Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>