force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/fields/Apttus_Config2__CatalogPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CatalogPage__c</fullName>
    <defaultValue>&quot;SelectConfigProductsFilterView&quot;</defaultValue>
    <description>The catalog page. Specify one of the following pages or a custom page.

SelectConfigProducts
SelectConfigProductsFilterView</description>
    <inlineHelpText>The catalog page. Specify one of the following pages or a custom page.

SelectConfigProducts
SelectConfigProductsFilterView</inlineHelpText>
    <label>Catalog Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>