force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/fields/Apttus_Config2__ProductAttributeDetailPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeDetailPage__c</fullName>
    <defaultValue>&quot;ProductAttributeDetail3&quot;</defaultValue>
    <description>The product attribute detail page. Specify the following page or a custom page. 

ProductAttributeDetail3</description>
    <inlineHelpText>The product attribute detail page. Specify the following page or a custom page. 

ProductAttributeDetail3</inlineHelpText>
    <label>Product Attribute Detail Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>