force-app/main/default/objects/Apttus_Config2__ConfigFlow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__AssetsPage__c</columns>
    <columns>Apttus_Config2__CartPage__c</columns>
    <columns>Apttus_Config2__CatalogPage__c</columns>
    <columns>Apttus_Config2__OptionsPage__c</columns>
    <columns>Apttus_Config2__ProductAttributeDetailPage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>